# horloge

./: .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml
.github/scripts/: ci.bash
.github/workflows/: ci.yml
firmware/: Cargo.toml
firmware/examples/: rgb_leds.rs
firmware/src/: main.rs  rgb_led.pio
gen_front/: Cargo.toml
gen_front/src/: cover.rs  dxf.rs  font.rs  main.rs  svg.rs
