[package]
name = "firmware"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[features]
french = []
english = []
default = ["french"]

[dependencies]
embassy-embedded-hal = { version = "0.4", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-executor = { version = "0.8", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.6", features = ["rt", "defmt", "time-driver", "critical-section-impl", "rp2040",
"rom-func-cache", "intrinsics", "rom-v2-intrinsics"] }
embassy-usb = { version = "0.5",features = ["defmt"] }
embassy-futures = "0.1"
embassy-usb-logger = "0.5"

fixed = "1.24"
fixed-macro = "1.2"

defmt = "1.0"
defmt-rtt = "1.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0"
