[package]
name = "gen_front"
edition = "2021"
version.workspace = true
rust-version.workspace = true
authors.workspace = true

[features]
french = []
english = []
draw_leds = []
draw_margins = []
fill = []
default = ["french", "draw_margins"]

[dependencies]
quick-xml = "0.37"
clap = "4.5"
ttf-parser = "0.25"
thiserror = "2.0"
