[package]
name = "gen_front"
edition = "2021"
version.workspace = true
rust-version.workspace = true
authors.workspace = true

[features]
french = []
english = []
draw_leds = []
draw_margins = []
draw_bounding_box = []
fill = []
default = ["french", "draw_leds", "draw_margins", "draw_bounding_box"]

[dependencies]
quick-xml = "0.37"
clap = "4.5"
ttf-parser = "0.25"
thiserror = "2.0"
